Creating base application, pushing an html folder to aws s3 from a subfolder

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+.flaskenv
+*.todo
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
