--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ flask-sqlalchemy = "*"
 mysql-connector-python = "*"
 argon2-cffi = "*"
 flask-mail = "*"
+celery = "*"
+flask-sse = "*"
 
 [dev-packages]
 
