--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@emailjs/browser": "^3.11.0",
 		"@fortawesome/fontawesome-svg-core": "^6.4.0",
 		"@fortawesome/free-solid-svg-icons": "^6.4.0",
 		"@fortawesome/react-fontawesome": "^0.2.0",
@@ -20,6 +21,7 @@
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.8.0",
 		"react-router-dom": "^6.8.1",
+		"react-toastify": "^9.1.3",
 		"react-transition-group": "^4.4.5"
 	},
 	"devDependencies": {
